# rOS

./: .gitignore  Cargo.toml  build-x86_64.sh  build.rs  limine.cfg  link.ld  x86_64-unknown-none.json
.cargo/: config.toml
platform/aarch64-unknown-none/rpi4/: boot.s  link.ld
platform/aarch64/rpi4/: aarch64-unknown-none.json
platform/i386/: i386-unknown-none.json
platform/x86_64/: x86_64-unknown-none.json
platform/x86_64/bootboot/: bootstrap.s  link.ld
src/: gdt.rs  main.rs  memory.rs  multiboot.S  peripherals.rs  serial.rs  subsystems.rs  timer.rs
src/arch/: mod.rs  ops.rs
src/arch/x86_64/: asm.rs  gdt.rs  mod.rs  serial.rs
src/arch/x86_64/irq/: exceptions.rs  idt.rs  mod.rs  pic.rs
src/arch/x86_64/timer/: pit.rs
src/assembly_macros/: mod.rs
src/bootboot/: mod.rs
src/diagnostics/: mod.rs
src/drivers/: mod.rs
src/drivers/io/: pci.rs
src/drivers/tty/: fb.rs  mod.rs
src/drivers/video/: framebuffer.rs  mod.rs
src/graphics/: framebuffer.rs  mod.rs
src/interrupts/: exceptions.rs  idt.rs  mod.rs  pic.rs
src/io/: pci.rs
src/kernel/: diagnostics.rs  log.rs  mm.rs  mod.rs
src/kernel/init/: limine.rs  mod.rs
src/kernel/irq/: mod.rs
src/kernel/mm/: kheap.rs  manager.rs  mod.rs  phys_allocator.rs  vm_manager.rs
src/keyboard/: mod.rs  ps2.rs
src/memory/: mem_manager.rs
src/memory/paging/: mod.rs  x86.rs
src/paging/x86/: mod.rs
src/terminal/: mod.rs  shell.rs  vga.rs
src/terminal/fb/: mod.rs
src/terminal/serial/: mod.rs
src/terminal/vga/: mod.rs
src/timer/: mod.rs  pit.rs
src/tty/: fb.rs  mod.rs
