[package]
name = "rOS"
version = "0.1.1"
edition = "2021"
authors = ["Radosław Wolański <radekw8733@gmail.com>"]

[features]
x86_64 = ["dep:x86_64"]

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"

[dependencies]
x86_64 = { version = "0.14.10", features = ["abi_x86_interrupt"], optional = true }
limine = "0.1.11"
spin = "0.9.8"
lazy_static = { version = "1.0.0", features = ["spin_no_std"] }
pci-ids = "0.2.5"
buddy_system_allocator = "0.9.0"
psf2 = { version = "0.4.0", default-features = false }