[package]
name = "rOS"
version = "0.1.1"
edition = "2021"
authors = ["Radosław Wolański <radekw8733@gmail.com>"]

[features]
x86_64 = ["dep:x86_64"]

limine = []

[profile.dev]
panic = "abort"
opt-level = 0

[profile.release]
panic = "abort"

[dependencies]
x86_64 = { version = "0.15.1", features = ["abi_x86_interrupt"], optional = true }
limine = "0.2.0"
spin = "0.9.8"
humansize = "2.1.3"
pci-ids = "0.2.5"
buddy_system_allocator = "0.10.0"
psf2 = { version = "0.4.0", default-features = false }
log = "0.4.22"
ansi_rgb = "0.2.0"
rgb = "0.8.45"
interrupts = "0.1.5"